<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="Led8266">Led8266</string>
    <string name="Login">LOGIN</string>
    <string name="Register">Register</string>
    <string name="Signup">Signup</string>
    <string name="novo_usuario_qm">novo usuário?</string>
    <string name="senha">Senha</string>
    <string name="teste">teste\n</string>
    <string name="MySQL">MySQL</string>
    <string name="GetID">GetID</string>
    <string name="showId">showId</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="esp8266">Esp8266</string>
</resources>