<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background_shape">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_background"
        android:hint="Usuário"
        android:padding="20dp"
        android:textColor="@color/design_default_color_secondary"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColorHint="@color/design_default_color_secondary"
        app:layout_constraintBottom_toTopOf="@id/senha"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_background"
        android:drawablePadding="20dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/design_default_color_secondary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColorHint="@color/design_default_color_secondary"
        app:layout_constraintTop_toBottomOf="@+id/user"
        tools:layout_editor_absoluteX="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/Login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getidbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/GetID"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/novo_cadastro_qm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="10dp"
        android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
        android:text="@string/novo_usuario_qm"
        android:textSize="12sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

</androidx.constraintlayout.widget.ConstraintLayout>